--- a/16.04.4.3.rst
+++ b/16.04.4.3.rst
@@ -1,5 +1,5 @@
-Release Notes
-=============
+16.04.4.3 Release Notes
+=======================
 
 -  | As always, make sure you verify the downloaded ISO image:
    | https://github.com/Security-Onion-Solutions/security-onion/blob/master/Verify_ISO.md
