--- a/2013.rst
+++ b/2013.rst
@@ -1,3 +1,6 @@
+Issues Resolved in 2013
+=======================
+
 | **January 2013**
 | Issue 285 : Fix pkill bug in Setup script
 | Issue 286 : Update Snorby to 2.5.4
