--- a/2014.rst
+++ b/2014.rst
@@ -1,3 +1,6 @@
+Issues Resolved in 2014
+=======================
+
 | **January 2014**
 | Issue 413 : Extend CapMe? to pull pcap file
 | Issue 449 : CapMe?: add timeout:0 to ELSA query
